style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Libre Baskerville";
}

body {
  display: flex;
  justify-content: center;
  background-color: #f3d021;
}

.calculator {
  transition: 0.5s;
  display: flex;
  flex-direction: column;
  width: 380px;
  height: auto;
  padding: 1rem;
  margin: 1.5rem;
  background-color: #333;
  box-shadow: -10px 5px 30px rgba(0, 0, 0, 0.5);
  border: 1px solid #111;
  border-radius: 10px;
}

.display-screen {
  display: flex;
  flex-direction: column;
  width: 350px;
  height: 80px;
  text-align: center;
  font-size: 2.5rem;
  border: 2px solid rgba(85, 75, 75, 0.4);
  background-color: #898274;
  border-radius: 15px;
  text-align: end;
}

.dislay {
  padding: 1rem;
}

.operation {
  font-size: 1.2rem;
  padding-right: 1rem;
  align-self: flex-start;
}

.buttons {
  padding: 0.5rem;
}

.buttons > * {
  display: flex;
  justify-content: flex-start;
  gap: 1.6rem;
  margin: 1rem;
}

button {
  font-size: 2rem;
  font-weight: 600;
  padding: 0.2rem;
  border: 2px solid #222;
  width: 70px;
  height: 65px;
  border-radius: 6px;
  color: #a09f9f;
  background: linear-gradient(#555353, #363535, #303030);
  box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
    0 15px 25px rgba(0, 0, 0, 0.35);
  text-align: center;
  cursor: pointer;
}

button:active {
  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35),
    inset 0 5px 5px rgba(0, 0, 0, 0.5), inset 0 15px 25px rgba(0, 0, 0, 0.35);
  color: #fff;
  text-shadow: 0 0 5px #f3cd21, 0 0 8px #f3d021;
}

.equals {
  flex-grow: 2;
}

